# sudoku

./: .gitignore  Makefile  README.md  pyproject.toml  sudoku.service
puzzles/: easy_001.json  killer_001.json
src/sudoku/: __main__.py
src/sudoku/application/: app.py  colors.py  debug_logger.py  dialog_renderer.py  input_handler.py  layout.py  menu.py  menu_renderer.py  perf_overlay.py  puzzle_loader.py  renderer.py  save_manager.py
src/sudoku/core/: cell.py  constraint.py  cursor.py  game_state.py  grid.py  validator.py
src/sudoku/game/: actions.py  command.py  game_controller.py
tests/application/: test_cage_adjacency.py  test_cage_validation.py  test_debug_logger.py  test_input_handler.py  test_layout.py  test_menu.py  test_menu_delete.py  test_puzzle_loader.py  test_save_constraints.py  test_save_highlight.py  test_save_manager.py
tests/core/: test_cage_sum_conflict.py  test_cell.py  test_cell_highlight.py  test_constraint.py  test_cursor.py  test_game_state.py  test_grid.py  test_validator.py
tests/game/: test_color_highlight.py  test_command.py  test_game_controller.py
